Make sure everything overlaps correctly

--- a/css/main.css
+++ b/css/main.css
@@ -216,6 +216,7 @@ main {
     left: 0;
     width: 100%;
     height: 4.1em;
+    z-index: 5;
     background-image: linear-gradient(180deg, #626055 0%, #42413c 100%); }
     main #info .title {
       display: block;
@@ -315,6 +316,7 @@ main {
   padding: 0 5%;
   width: 100%;
   height: 100%;
+  z-index: 10;
   overflow: hidden;
   background-image: url("pics/coverdark.svg");
   background-position: center;
