--- a/css/sass/now_playing.scss
+++ b/css/sass/now_playing.scss
@@ -18,6 +18,8 @@ main {
         width: 100%;
         height: 4.1em;
 
+        z-index: 5;
+
         background-image: linear-gradient(180deg, #626055 0%, #42413c 100%);
 
         .title {
@@ -169,6 +171,8 @@ main {
 
     width: 100%;
     height: 100%;
+
+    z-index: 10;
 
     overflow: hidden;
 
